profile images spacing fixed

--- a/src/ProfilePage/ProfilePage.css
+++ b/src/ProfilePage/ProfilePage.css
@@ -60,3 +60,7 @@
 .tab-wrapper > h2 {
   margin: 0 20px 0 0;
 }
+
+.prof-images-sect {
+  margin: 0;
+}
